@@ -14,7 +14,7 @@ uid_calc=UID Calculation Method,4,0-Berkeley cksum,1-Custom mkuid program
 gid_calc=GID Calculation Method,4,0-Berkeley cksum,1-Custom mkgid program
 new_user_group=Create new group for new users?,1,1-Yes,0-No
 new_user_gid=Assign same ID to new user and group?,1,1-Yes,0-No
-md5=Password encryption method,1,2-MD5,1-Determine automatically,0-DES crypt
+md5=Password encryption method,1,2-MD5,1-Determine automatically,0-DES crypt,3-Blowfish
 alias_check=Check for sendmail alias clashes?,1,1-Yes,0-No
 delete_only=Only delete files owned by user?,1,1-Yes,0-No
 max_length=Maximum user and group name length,3,Unlimited
