@@ -54,3 +54,4 @@ Added a non-editable list of users who have this group as their primary to the E
 Added a Module Config option to use a text box for entering secondary group members, rather than the left/right user chooser.
 Created a page for exporting groups to a batch file, for importing on other systems.
 Added support for creating, deleting and modifying groups from a batch file. This is similar to the long-standing batch user management functionality.
+Added support for Blowfish password hashing, which can be enabled on the Module Config page. On Solaris systems, it will be used if enabled in /etc/security/policy.conf. Requires the Crypt::Eksblowfish::Bcrypt Perl module though.
